--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -27,6 +27,8 @@
 	<p>
 		Visit our article <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebRTC_API/Taking_still_photos"> Taking still photos with WebRTC</a> to learn more about the technologies used here.
 	</p>
+	<button id="ValidButton" onclick="validate()">validate</button>
+	<div id="result"></div>
 </div>
 </body>
 </html>
